<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_task_label"
            android:textSize="30dp"
            android:textAlignment="center"
            android:textColor="@color/colorBlack" />

        <EditText
            android:id="@+id/add_task_name"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textColor="@color/colorBlack"
            android:hint="@string/add_task_name_hint" />

        <EditText
            android:id="@+id/add_task_place"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textColor="@color/colorBlack"
            android:hint="@string/add_task_location_hint" />

        <EditText
            android:id="@+id/add_task_message"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textColor="@color/colorBlack"
            android:hint="@string/add_task_message_hint" />

        <Button
            android:id="@+id/update_task_button"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_task_button_text"
            android:textSize="25dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorGreen"  />

        <Button
            android:id="@+id/delete_task_button"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_task_button_text"
            android:textSize="25dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorRed"  />

        <Button
            android:id="@+id/go_back_button"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_back_button_text"
            android:textSize="25dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"  />

    </LinearLayout>
</ScrollView>